fixed tag button alignment

--- a/client/src/styles/professor/ProfessorTagInfo.less
+++ b/client/src/styles/professor/ProfessorTagInfo.less
@@ -74,6 +74,7 @@
             background: #898989;
             color: #edeff2;
             padding: 1.5px 5px;
+            margin-bottom: 1px;
             line-height: 22px;
             vertical-align: bottom;
             width: auto;
